# AgenticAI

./: .gitignore  README.md  pyproject.toml
LangGraph/: 1. BasicDetails.ipynb  2. LangAgentWithTools.ipynb  BasicDetails.ipynb  Playwright.py
